Added a shadow, implemented game area resize and centering, some minor cleanup

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div id="d">
-			<div id="b">e</div>
+			<div id="b"></div>
 			<div id="g"></div>
 			<div id="f1"></div>
 			<div id="f2"></div>
