--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 	<head><meta charset="utf-8">
 		<title>js13k2024</title>
 		<script type="text/javascript" src="data_graphics.js"></script>
+		<script type="text/javascript" src="lib.js"></script>
+		<script type="text/javascript" src="game.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 		<link type="text/css" rel="stylesheet" href="style.css" />
 	</head>
