Added almost_random.js, added fixed scrolling, started to implement level generation

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 		<title>js13k2024</title>
 		<script type="text/javascript" src="data_graphics.js"></script>
 		<script type="text/javascript" src="lib.js"></script>
+		<script type="text/javascript" src="almost_random.js"></script>
 		<script type="text/javascript" src="game.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 		<link type="text/css" rel="stylesheet" href="style.css" />
