Added the beginning of level loading, added level data

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 	<head><meta charset="utf-8">
 		<title>js13k2024</title>
 		<script type="text/javascript" src="data_graphics.js"></script>
+		<script type="text/javascript" src="data_levels.js"></script>
 		<script type="text/javascript" src="lib.js"></script>
 		<script type="text/javascript" src="almost_random.js"></script>
 		<script type="text/javascript" src="game.js"></script>
