Added more enemy definitions, added score display, added score counting, added win condition

--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,14 @@
 			<div id="f3"></div>
 			<div id="f4"></div>
 		</div>
+		<div id="s">
+			<span id="s0">3 / 12</span>
+			<span id="s1">0 / 3</span>
+			<span id="s2">0 / 3</span>
+			<span id="s3">0 / 3</span>
+			<span id="s4">0 / 3</span>
+			<span id="s5">0 / 3</span>
+			<span id="st">Total: 3 / 15</span>
+		</div>
 	</body>
 </html>
