--- a/src/index.html
+++ b/src/index.html
@@ -19,13 +19,14 @@
 			<div id="f4"></div>
 		</div>
 		<div id="s">
-			<span id="s0">3 / 12</span>
-			<span id="s1">0 / 3</span>
-			<span id="s2">0 / 3</span>
-			<span id="s3">0 / 3</span>
-			<span id="s4">0 / 3</span>
-			<span id="s5">0 / 3</span>
-			<span id="st">Total: 3 / 15</span>
+			<span id="s0"></span>
+			<span id="s1"></span>
+			<span id="s2"></span>
+			<span id="s3"></span>
+			<span id="s4"></span>
+			<span id="s5"></span>
+			<span id="st"></span>
 		</div>
+		<div id="m">Lorem ipsum dolor sit amet.</div>
 	</body>
 </html>
