--- a/src/index.html
+++ b/src/index.html
@@ -28,5 +28,6 @@
 			<span id="st"></span>
 		</div>
 		<div id="m">Lorem ipsum dolor sit amet.</div>
+		<div id="mb">Continue</div>
 	</body>
 </html>
