Added an overlay for the Oof! effect, now also changing timescale when executed

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
 			<div id="f3"></div>
 			<div id="f4"></div>
 		</div>
+		<div id="o"></div>
 		<div id="w"></div>
 		<div id="s">
 			<span id="s0"></span>
