--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 			<span id="s5"></span>
 			<span id="st"></span>
 		</div>
-		<div id="m">Lorem ipsum dolor sit amet.</div>
+		<div id="m"></div>
 		<div id="mb">Continue</div>
 	</body>
 </html>
