--- a/src/index.min.html
+++ b/src/index.min.html
@@ -1,4 +1,5 @@
 <html><head><meta charset="utf-8"><title>js13k2024</title>
 <!-- insert minified css here -->
 <!-- insert minified javascript here -->
-</head><body><div id="d"></div></body></html>
+</head><body>
+<div id="d"><div id="b"></div><div id="g"></div><div id="f1"></div><div id="f2"></div><div id="f3"></div><div id="f4"></div></div><div id="o"></div><div id="w"></div><div id="s"><span id="s0"></span><span id="s1"></span><span id="s2"></span><span id="s3"></span><span id="s4"></span><span id="s5"></span><span id="st"></span></div><div id="m"></div><div id="mb">Continue</div></body></html>
