Added sounds, added the "click to start" div

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,13 @@
 <html>
 	<head><meta charset="utf-8">
 		<title>js13k2024</title>
+		<script type="text/javascript" src="3rdparty/ZzFXMicro.min.js"></script>
 		<script type="text/javascript" src="data_graphics.js"></script>
+		<script type="text/javascript" src="data_sounds.js"></script>
 		<script type="text/javascript" src="data_levels.js"></script>
 		<script type="text/javascript" src="lib.js"></script>
 		<script type="text/javascript" src="almost_random.js"></script>
+		<script type="text/javascript" src="sound_manager.js"></script>
 		<script type="text/javascript" src="game.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 		<link type="text/css" rel="stylesheet" href="style.css" />
@@ -31,5 +34,6 @@
 		</div>
 		<div id="m"></div>
 		<div id="mb">Continue</div>
+		<div id="q"></div>
 	</body>
 </html>
