--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
 			<span id="s5"></span>
 			<span id="st"></span>
 		</div>
+		<div id="r"></div>
 		<div id="m"></div>
 		<div id="mb">Continue</div>
 		<div id="q"></div>
