Updated the htmls

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head><meta charset="utf-8">
-		<title>js13k2024</title>
+		<title>js13k2024 by gheja</title>
 		<script type="text/javascript" src="3rdparty/ZzFXMicro.min.js"></script>
 		<script type="text/javascript" src="data_graphics.js"></script>
 		<script type="text/javascript" src="data_sounds.js"></script>
